--- a/index.html
+++ b/index.html
@@ -4,10 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRM Dashboard</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            transition: background 0.3s, color 0.3s;
+        }
+        .navbar {
+            display: flex;
+            justify-content: space-around;
+            padding: 15px;
+            background: #007BFF;
+            color: white;
+        }
+        .container {
+            padding: 20px;
+        }
+        .toggle-button {
+            cursor: pointer;
+            padding: 10px 20px;
+            background: #333;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            margin-top: 20px;
+        }
+        .dark-mode {
+            background: #121212;
+            color: white;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to Your CRM</h1>
-    <script src="script.js"></script>
+    <div class="navbar">
+        <div>Home</div>
+        <div>Dashboard</div>
+        <div>Contact</div>
+    </div>
+    <div class="container">
+        <h1>Welcome to Your CRM</h1>
+        <button class="toggle-button" onclick="toggleDarkMode()">Toggle Dark Mode</button>
+    </div>
+    <script>
+        function toggleDarkMode() {
+            document.body.classList.toggle('dark-mode');
+        }
+    </script>
 </body>
 </html>
