--- a/index.html
+++ b/index.html
@@ -14,43 +14,141 @@
         }
         .navbar {
             display: flex;
-            justify-content: space-around;
-            padding: 15px;
-            background: #007BFF;
-            color: white;
-        }
-        .container {
-            padding: 20px;
-        }
-        .toggle-button {
-            cursor: pointer;
-            padding: 10px 20px;
+            justify-content: flex-end;
+            padding: 10px;
             background: #333;
             color: white;
-            border: none;
+        }
+        .settings {
+            position: relative;
+            display: inline-block;
+            cursor: pointer;
+            padding: 5px 15px;
+            background: #444;
             border-radius: 5px;
-            margin-top: 20px;
+        }
+        .settings-menu {
+            display: none;
+            position: absolute;
+            right: 0;
+            background: white;
+            color: black;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 5px;
+            padding: 10px;
+            width: 150px;
+        }
+        .settings:hover .settings-menu {
+            display: block;
+        }
+        .toggle-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 10px;
+        }
+        .toggle-switch {
+            position: relative;
+            display: inline-block;
+            width: 40px;
+            height: 20px;
+        }
+        .toggle-switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            transition: .4s;
+            border-radius: 20px;
+        }
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 14px;
+            width: 14px;
+            left: 3px;
+            bottom: 3px;
+            background-color: white;
+            transition: .4s;
+            border-radius: 50%;
+        }
+        input:checked + .slider {
+            background-color: #2196F3;
+        }
+        input:checked + .slider:before {
+            transform: translateX(20px);
         }
         .dark-mode {
-            background: #121212;
+            background: #222;
             color: white;
+        }
+        .login-btn {
+            display: block;
+            width: 100%;
+            padding: 8px;
+            text-align: center;
+            background: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
+        .login-btn:hover {
+            background: #0056b3;
         }
     </style>
 </head>
 <body>
+
     <div class="navbar">
-        <div>Home</div>
-        <div>Dashboard</div>
-        <div>Contact</div>
+        <div class="settings">
+            ⚙ Settings
+            <div class="settings-menu">
+                <div class="toggle-container">
+                    <span>Dark Mode</span>
+                    <label class="toggle-switch">
+                        <input type="checkbox" id="themeToggle">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+                <button id="loginButton" class="login-btn">Login</button>
+            </div>
+        </div>
     </div>
-    <div class="container">
-        <h1>Welcome to Your CRM</h1>
-        <button class="toggle-button" onclick="toggleDarkMode()">Toggle Dark Mode</button>
-    </div>
+
+    <h1 id="welcomeMessage">Welcome to Your CRM</h1>
+
     <script>
-        function toggleDarkMode() {
-            document.body.classList.toggle('dark-mode');
-        }
+        const themeToggle = document.getElementById('themeToggle');
+        const loginButton = document.getElementById('loginButton');
+        const welcomeMessage = document.getElementById('welcomeMessage');
+
+        themeToggle.addEventListener('change', function() {
+            document.body.classList.toggle('dark-mode', this.checked);
+        });
+
+        let isLoggedIn = false;
+
+        loginButton.addEventListener('click', function() {
+            isLoggedIn = !isLoggedIn;
+            if (isLoggedIn) {
+                loginButton.textContent = "Logout";
+                welcomeMessage.textContent = "Welcome Back!";
+            } else {
+                loginButton.textContent = "Login";
+                welcomeMessage.textContent = "Welcome to Your CRM";
+            }
+        });
     </script>
+
 </body>
 </html>
