--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
         }
         .navbar {
             display: flex;
-            justify-content: flex-end;
+            justify-content: space-between;
             padding: 10px;
             background: #333;
             color: white;
+        }
+        .nav-links a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
         }
         .settings {
             position: relative;
@@ -41,158 +46,65 @@
         .settings:hover .settings-menu {
             display: block;
         }
-        .toggle-container {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin-bottom: 10px;
-        }
-        .toggle-switch {
-            position: relative;
-            display: inline-block;
-            width: 40px;
-            height: 20px;
-        }
-        .toggle-switch input {
-            opacity: 0;
-            width: 0;
-            height: 0;
-        }
-        .slider {
-            position: absolute;
-            cursor: pointer;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: #ccc;
-            transition: .4s;
-            border-radius: 20px;
-        }
-        .slider:before {
-            position: absolute;
-            content: "";
-            height: 14px;
-            width: 14px;
-            left: 3px;
-            bottom: 3px;
-            background-color: white;
-            transition: .4s;
-            border-radius: 50%;
-        }
-        input:checked + .slider {
-            background-color: #2196F3;
-        }
-        input:checked + .slider:before {
-            transform: translateX(20px);
-        }
         .dark-mode {
             background: #222;
             color: white;
         }
-        .login-btn {
-            display: block;
-            width: 100%;
-            padding: 8px;
-            text-align: center;
-            background: #007bff;
-            color: white;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: 0.3s;
-            margin-top: 10px;
-        }
-        .login-btn:hover {
-            background: #0056b3;
-        }
-        .login-form {
-            display: none;
-            padding: 10px;
-            text-align: left;
-        }
-        .login-form input {
-            width: 100%;
-            padding: 5px;
-            margin: 5px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        .error-message {
-            color: red;
-            font-size: 12px;
-            display: none;
+        .profile {
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
-
     <div class="navbar">
+        <div class="nav-links">
+            <a href="#dashboard">Dashboard</a>
+            <a href="#clients">Clients</a>
+            <a href="#reports">Reports</a>
+        </div>
         <div class="settings">
             ⚙ Settings
             <div class="settings-menu">
-                <div class="toggle-container">
-                    <span>Dark Mode</span>
-                    <label class="toggle-switch">
-                        <input type="checkbox" id="themeToggle">
-                        <span class="slider"></span>
-                    </label>
-                </div>
-                <button id="loginButton" class="login-btn">Login</button>
-                <div id="loginForm" class="login-form">
-                    <input type="text" id="username" placeholder="Username">
-                    <input type="password" id="password" placeholder="Password">
-                    <button id="submitLogin" class="login-btn">Submit</button>
-                    <p class="error-message" id="errorMessage">Invalid credentials!</p>
+                <button id="loginButton">Login</button>
+                <div id="userProfile" class="profile" style="display: none;">
+                    <p id="userRole"></p>
+                    <button id="logoutButton">Logout</button>
                 </div>
             </div>
         </div>
     </div>
-
     <h1 id="welcomeMessage">Welcome to Your CRM</h1>
-
     <script>
-        const themeToggle = document.getElementById('themeToggle');
         const loginButton = document.getElementById('loginButton');
-        const loginForm = document.getElementById('loginForm');
-        const submitLogin = document.getElementById('submitLogin');
-        const usernameInput = document.getElementById('username');
-        const passwordInput = document.getElementById('password');
-        const errorMessage = document.getElementById('errorMessage');
+        const logoutButton = document.getElementById('logoutButton');
+        const userProfile = document.getElementById('userProfile');
+        const userRoleText = document.getElementById('userRole');
         const welcomeMessage = document.getElementById('welcomeMessage');
 
-        const correctUsername = "admin";
-        const correctPassword = "1234";
-
-        themeToggle.addEventListener('change', function() {
-            document.body.classList.toggle('dark-mode', this.checked);
-        });
-
-        let isLoggedIn = false;
+        const users = {
+            "admin": { password: "admin123", role: "Admin" },
+            "analyst": { password: "analyst123", role: "Analyst" },
+            "client": { password: "client123", role: "Client" }
+        };
 
         loginButton.addEventListener('click', function() {
-            if (!isLoggedIn) {
-                loginForm.style.display = loginForm.style.display === "block" ? "none" : "block";
+            let username = prompt("Enter Username:");
+            let password = prompt("Enter Password:");
+            if (users[username] && users[username].password === password) {
+                userProfile.style.display = "block";
+                loginButton.style.display = "none";
+                userRoleText.textContent = "Role: " + users[username].role;
+                welcomeMessage.textContent = "Welcome " + users[username].role + "!";
             } else {
-                isLoggedIn = false;
-                loginButton.textContent = "Login";
-                welcomeMessage.textContent = "Welcome to Your CRM";
-                loginForm.style.display = "none";
+                alert("Invalid credentials!");
             }
         });
 
-        submitLogin.addEventListener('click', function() {
-            if (usernameInput.value === correctUsername && passwordInput.value === correctPassword) {
-                isLoggedIn = true;
-                loginButton.textContent = "Logout";
-                welcomeMessage.textContent = "Welcome Back!";
-                loginForm.style.display = "none";
-                errorMessage.style.display = "none";
-            } else {
-                errorMessage.style.display = "block";
-            }
+        logoutButton.addEventListener('click', function() {
+            userProfile.style.display = "none";
+            loginButton.style.display = "block";
+            welcomeMessage.textContent = "Welcome to Your CRM";
         });
     </script>
-
 </body>
 </html>
