--- a/index.html
+++ b/index.html
@@ -14,54 +14,47 @@
         }
         .navbar {
             display: flex;
-            justify-content: flex-end;
+            justify-content: space-between;
             padding: 10px;
             background: #333;
             color: white;
-        }
-        .settings {
-            position: relative;
-            display: inline-block;
-            cursor: pointer;
-            padding: 5px 15px;
-            background: #444;
-            border-radius: 5px;
-        }
-        .settings-menu {
-            display: none;
-            position: absolute;
-            right: 0;
-            background: white;
-            color: black;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-            border-radius: 5px;
-            padding: 10px;
-            width: 200px;
-        }
-        .settings:hover .settings-menu {
-            display: block;
-        }
-        .toggle-container {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin-bottom: 10px;
         }
         .dark-mode {
             background: #222;
             color: white;
         }
-        .login-form {
-            display: none;
-            padding: 10px;
-            text-align: left;
+        .toggle-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
         }
-        .login-form input {
+        .login-container {
+            width: 300px;
+            margin: 50px auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            background: white;
+        }
+        .login-container input {
             width: 100%;
-            padding: 5px;
-            margin: 5px 0;
+            padding: 10px;
+            margin: 10px 0;
             border: 1px solid #ccc;
             border-radius: 5px;
+        }
+        .login-btn {
+            width: 100%;
+            padding: 10px;
+            background: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+        .login-btn:hover {
+            background: #0056b3;
         }
         .error-message {
             color: red;
@@ -79,38 +72,51 @@
             justify-content: space-around;
             margin-top: 10px;
         }
+        .liked {
+            color: green;
+        }
+        .disliked {
+            color: red;
+        }
     </style>
 </head>
 <body>
 
     <div class="navbar">
-        <div class="settings">
-            ⚙ Settings
-            <div class="settings-menu">
-                <button id="loginButton">Login</button>
-                <div id="loginForm" class="login-form">
-                    <input type="text" id="username" placeholder="Username">
-                    <input type="password" id="password" placeholder="Password">
-                    <label>
-                        <input type="checkbox" id="rememberMe"> Keep Me Signed In
-                    </label>
-                    <button id="submitLogin">Submit</button>
-                    <p class="error-message" id="errorMessage">Invalid credentials!</p>
-                </div>
-            </div>
+        <div class="toggle-container">
+            <span>Dark Mode</span>
+            <label class="toggle-switch">
+                <input type="checkbox" id="themeToggle">
+                <span class="slider"></span>
+            </label>
+        </div>
+        <button id="logoutButton" style="display: none;">Logout</button>
+    </div>
+
+    <div id="loginSection">
+        <div class="login-container">
+            <h2>Login</h2>
+            <input type="text" id="username" placeholder="Username">
+            <input type="password" id="password" placeholder="Password">
+            <label>
+                <input type="checkbox" id="rememberMe"> Keep Me Signed In
+            </label>
+            <button id="submitLogin" class="login-btn">Login</button>
+            <p class="error-message" id="errorMessage">Invalid credentials!</p>
         </div>
     </div>
 
-    <h1 id="welcomeMessage">Welcome to Your CRM</h1>
-
-    <div id="recommendations">
-        <h2>Stock Market Recommendations</h2>
-        <div class="recommendation">
-            <h3>Intraday Trade</h3>
-            <p>Buy at: ₹100 | Target: ₹110 | Stop Loss: ₹95 | Status: Open</p>
-            <div class="like-dislike">
-                <button class="likeBtn">👍 Like</button>
-                <button class="dislikeBtn">👎 Dislike</button>
+    <div id="dashboard" style="display: none;">
+        <h1 id="welcomeMessage">Welcome to Your CRM</h1>
+        <div id="recommendations">
+            <h2>Stock Market Recommendations</h2>
+            <div class="recommendation">
+                <h3>Intraday Trade</h3>
+                <p>Buy at: ₹100 | Target: ₹110 | Stop Loss: ₹95 | Status: Open</p>
+                <div class="like-dislike">
+                    <button class="likeBtn">👍 Like</button>
+                    <button class="dislikeBtn">👎 Dislike</button>
+                </div>
             </div>
         </div>
     </div>
@@ -122,13 +128,16 @@
             "client": { password: "client123", role: "Client" }
         };
 
-        const loginButton = document.getElementById('loginButton');
+        const themeToggle = document.getElementById('themeToggle');
         const submitLogin = document.getElementById('submitLogin');
         const usernameInput = document.getElementById('username');
         const passwordInput = document.getElementById('password');
         const rememberMe = document.getElementById('rememberMe');
         const errorMessage = document.getElementById('errorMessage');
         const welcomeMessage = document.getElementById('welcomeMessage');
+        const logoutButton = document.getElementById('logoutButton');
+        const loginSection = document.getElementById('loginSection');
+        const dashboard = document.getElementById('dashboard');
 
         function saveLogin(username, role) {
             localStorage.setItem("loggedInUser", JSON.stringify({ username, role }));
@@ -137,9 +146,15 @@
         function loadLogin() {
             const savedUser = JSON.parse(localStorage.getItem("loggedInUser"));
             if (savedUser) {
-                welcomeMessage.textContent = `Welcome ${savedUser.role}!`;
-                loginButton.textContent = "Logout";
+                showDashboard(savedUser.role);
             }
+        }
+
+        function showDashboard(role) {
+            loginSection.style.display = "none";
+            dashboard.style.display = "block";
+            logoutButton.style.display = "block";
+            welcomeMessage.textContent = `Welcome ${role}!`;
         }
 
         submitLogin.addEventListener('click', function() {
@@ -147,8 +162,7 @@
             let password = passwordInput.value.trim();
             
             if (users[username] && users[username].password === password) {
-                welcomeMessage.textContent = `Welcome ${users[username].role}!`;
-                loginButton.textContent = "Logout";
+                showDashboard(users[username].role);
 
                 if (rememberMe.checked) {
                     saveLogin(username, users[username].role);
@@ -158,26 +172,29 @@
             }
         });
 
-        loginButton.addEventListener('click', function() {
-            if (loginButton.textContent === "Logout") {
-                localStorage.removeItem("loggedInUser");
-                location.reload();
-            }
+        logoutButton.addEventListener('click', function() {
+            localStorage.removeItem("loggedInUser");
+            location.reload();
         });
 
         loadLogin();
 
-        document.querySelectorAll('.likeBtn').forEach(btn => {
-            btn.addEventListener('click', () => {
-                alert("You liked this recommendation!");
+        document.querySelectorAll('.likeBtn, .dislikeBtn').forEach(button => {
+            button.addEventListener('click', function() {
+                let parent = this.parentElement;
+                let likeBtn = parent.querySelector('.likeBtn');
+                let dislikeBtn = parent.querySelector('.dislikeBtn');
+
+                if (this.classList.contains("likeBtn")) {
+                    likeBtn.classList.toggle("liked");
+                    dislikeBtn.classList.remove("disliked");
+                } else {
+                    dislikeBtn.classList.toggle("disliked");
+                    likeBtn.classList.remove("liked");
+                }
             });
         });
 
-        document.querySelectorAll('.dislikeBtn').forEach(btn => {
-            btn.addEventListener('click', () => {
-                alert("You disliked this recommendation!");
-            });
-        });
     </script>
 
 </body>
