--- a/index.html
+++ b/index.html
@@ -5,100 +5,197 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRM Dashboard</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f4f4f4; }
-        .container { width: 80%; margin: auto; padding: 20px; background: white; }
-        .hidden { display: none; }
-        .navbar { display: flex; justify-content: space-between; background: #333; color: white; padding: 10px; }
-        .navbar button { background: none; border: none; color: white; cursor: pointer; }
-        .settings-menu { position: absolute; right: 10px; top: 50px; background: white; border: 1px solid #ccc; padding: 10px; display: none; }
-        .dashboard { margin-top: 20px; }
-        .recommendation { border: 1px solid #ddd; padding: 10px; margin: 10px 0; }
-        .dark-mode { background: #222; color: white; }
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            transition: background 0.3s, color 0.3s;
+        }
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            padding: 10px;
+            background: #333;
+            color: white;
+        }
+        .dark-mode {
+            background: #222;
+            color: white;
+        }
+        .toggle-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+        .login-container {
+            width: 300px;
+            margin: 50px auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            background: white;
+        }
+        .login-container input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        .login-btn {
+            width: 100%;
+            padding: 10px;
+            background: #007bff;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+        .login-btn:hover {
+            background: #0056b3;
+        }
+        .error-message {
+            color: red;
+            font-size: 12px;
+            display: none;
+        }
+        .recommendation {
+            border: 1px solid #ccc;
+            padding: 10px;
+            margin: 10px;
+            border-radius: 5px;
+        }
+        .like-dislike {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 10px;
+        }
+        .liked {
+            color: green;
+        }
+        .disliked {
+            color: red;
+        }
     </style>
 </head>
 <body>
 
     <div class="navbar">
-        <span>CRM Dashboard</span>
-        <button onclick="toggleSettings()">⚙ Settings</button>
+        <div class="toggle-container">
+            <span>Dark Mode</span>
+            <label class="toggle-switch">
+                <input type="checkbox" id="themeToggle">
+                <span class="slider"></span>
+            </label>
+        </div>
+        <button id="logoutButton" style="display: none;">Logout</button>
     </div>
 
-    <div class="settings-menu" id="settingsMenu">
-        <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
-        <button onclick="logout()">Logout</button>
+    <div id="loginSection">
+        <div class="login-container">
+            <h2>Login</h2>
+            <input type="text" id="username" placeholder="Username">
+            <input type="password" id="password" placeholder="Password">
+            <label>
+                <input type="checkbox" id="rememberMe"> Keep Me Signed In
+            </label>
+            <button id="submitLogin" class="login-btn">Login</button>
+            <p class="error-message" id="errorMessage">Invalid credentials!</p>
+        </div>
     </div>
 
-    <div class="container" id="loginForm">
-        <h2>Login</h2>
-        <input type="text" id="username" placeholder="Username">
-        <input type="password" id="password" placeholder="Password">
-        <button onclick="login()">Login</button>
-    </div>
-
-    <div class="container hidden" id="dashboard">
-        <h2>Welcome to the CRM</h2>
-        <div class="dashboard">
-            <h3>Stock Recommendations</h3>
-            <div id="recommendations"></div>
+    <div id="dashboard" style="display: none;">
+        <h1 id="welcomeMessage">Welcome to Your CRM</h1>
+        <div id="recommendations">
+            <h2>Stock Market Recommendations</h2>
+            <div class="recommendation">
+                <h3>Intraday Trade</h3>
+                <p>Buy at: ₹100 | Target: ₹110 | Stop Loss: ₹95 | Status: Open</p>
+                <div class="like-dislike">
+                    <button class="likeBtn">👍 Like</button>
+                    <button class="dislikeBtn">👎 Dislike</button>
+                </div>
+            </div>
         </div>
     </div>
 
     <script>
-        let darkMode = localStorage.getItem("darkMode") === "enabled";
-        document.body.classList.toggle("dark-mode", darkMode);
+        const users = {
+            "admin": { password: "admin123", role: "Admin" },
+            "analyst": { password: "analyst123", role: "Analyst" },
+            "client": { password: "client123", role: "Client" }
+        };
 
-        function toggleDarkMode() {
-            darkMode = !darkMode;
-            localStorage.setItem("darkMode", darkMode ? "enabled" : "disabled");
-            document.body.classList.toggle("dark-mode", darkMode);
+        const themeToggle = document.getElementById('themeToggle');
+        const submitLogin = document.getElementById('submitLogin');
+        const usernameInput = document.getElementById('username');
+        const passwordInput = document.getElementById('password');
+        const rememberMe = document.getElementById('rememberMe');
+        const errorMessage = document.getElementById('errorMessage');
+        const welcomeMessage = document.getElementById('welcomeMessage');
+        const logoutButton = document.getElementById('logoutButton');
+        const loginSection = document.getElementById('loginSection');
+        const dashboard = document.getElementById('dashboard');
+
+        function saveLogin(username, role) {
+            localStorage.setItem("loggedInUser", JSON.stringify({ username, role }));
         }
 
-        function toggleSettings() {
-            const menu = document.getElementById("settingsMenu");
-            menu.style.display = menu.style.display === "block" ? "none" : "block";
+        function loadLogin() {
+            const savedUser = JSON.parse(localStorage.getItem("loggedInUser"));
+            if (savedUser) {
+                showDashboard(savedUser.role);
+            }
         }
 
-        function login() {
-            document.getElementById("loginForm").classList.add("hidden");
-            document.getElementById("dashboard").classList.remove("hidden");
+        function showDashboard(role) {
+            loginSection.style.display = "none";
+            dashboard.style.display = "block";
+            logoutButton.style.display = "block";
+            welcomeMessage.textContent = `Welcome ${role}!`;
         }
 
-        function logout() {
-            document.getElementById("loginForm").classList.remove("hidden");
-            document.getElementById("dashboard").classList.add("hidden");
-        }
+        submitLogin.addEventListener('click', function() {
+            let username = usernameInput.value.trim().toLowerCase();
+            let password = passwordInput.value.trim();
+            
+            if (users[username] && users[username].password === password) {
+                showDashboard(users[username].role);
 
-        function loadRecommendations() {
-            let recommendations = [
-                { id: 1, stock: "TCS", price: 3500, status: "Open", liked: false },
-                { id: 2, stock: "INFY", price: 1600, status: "Closed", liked: false }
-            ];
+                if (rememberMe.checked) {
+                    saveLogin(username, users[username].role);
+                }
+            } else {
+                errorMessage.style.display = "block";
+            }
+        });
 
-            let container = document.getElementById("recommendations");
-            container.innerHTML = "";
+        logoutButton.addEventListener('click', function() {
+            localStorage.removeItem("loggedInUser");
+            location.reload();
+        });
 
-            recommendations.forEach(rec => {
-                let div = document.createElement("div");
-                div.classList.add("recommendation");
-                div.innerHTML = `
-                    <p><strong>${rec.stock}</strong> - ₹${rec.price} (${rec.status})</p>
-                    <button onclick="toggleLike(${rec.id})">👍</button>
-                    <button onclick="toggleDislike(${rec.id})">👎</button>
-                `;
-                container.appendChild(div);
+        loadLogin();
+
+        document.querySelectorAll('.likeBtn, .dislikeBtn').forEach(button => {
+            button.addEventListener('click', function() {
+                let parent = this.parentElement;
+                let likeBtn = parent.querySelector('.likeBtn');
+                let dislikeBtn = parent.querySelector('.dislikeBtn');
+
+                if (this.classList.contains("likeBtn")) {
+                    likeBtn.classList.toggle("liked");
+                    dislikeBtn.classList.remove("disliked");
+                } else {
+                    dislikeBtn.classList.toggle("disliked");
+                    likeBtn.classList.remove("liked");
+                }
             });
-        }
+        });
 
-        function toggleLike(id) {
-            console.log(`Liked recommendation ${id}`);
-        }
-
-        function toggleDislike(id) {
-            console.log(`Disliked recommendation ${id}`);
-        }
-
-        loadRecommendations();
     </script>
 
 </body>
-</html
+</html>
